force-app/main/default/objects/Activity/fields/Auto_ref_E_Bkg_ID__c.field-meta.xml
<CustomField>
    <fullName>Auto_ref_E_Bkg_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto ref S/O/E-Bkg ID</label>
    <type>Checkbox</type>
</CustomField>