force-app/main/default/objects/Activity/fields/E_Booking__c.field-meta.xml
<CustomField>
    <fullName>E_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-Booking</label>
    <referenceTo>EBooking__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>