force-app/main/default/objects/Activity/fields/F_TMS_S_O__c.field-meta.xml
<CustomField>
    <fullName>F_TMS_S_O__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F/TMS S/O</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>