force-app/main/default/objects/Activity/fields/Master_Bkg_No__c.field-meta.xml
<CustomField>
    <fullName>Master_Bkg_No__c</fullName>
    <formula>E_Booking__r.MasterBookingNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Bkg No #</label>
    <type>Text</type>
</CustomField>